force-app/main/default/objects/Contact_Property__c.object
<CustomObject>
    <description>Properties owned by or related to the contact. I don&apos;t believe that this is still in use.</description>
    <fields>
        <fullName>Access_from_public_roads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access from public roads?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acres__c</fullName>
        <label>Acres</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acres_in_WHEP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acres in WHEP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>All_fields_contiguous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All fields contiguous?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bid_for_growers_entire_acreage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bid for grower&apos;s entire acreage?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contact_Properties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alameda</fullName>
                </value>
                <value>
                    <fullName>Alpine</fullName>
                </value>
                <value>
                    <fullName>Amador</fullName>
                </value>
                <value>
                    <fullName>Butte</fullName>
                </value>
                <value>
                    <fullName>Calaveras</fullName>
                </value>
                <value>
                    <fullName>Colusa</fullName>
                </value>
                <value>
                    <fullName>Contra Costa</fullName>
                </value>
                <value>
                    <fullName>Del Norte</fullName>
                </value>
                <value>
                    <fullName>El Dorado</fullName>
                </value>
                <value>
                    <fullName>Fresno</fullName>
                </value>
                <value>
                    <fullName>Glenn</fullName>
                </value>
                <value>
                    <fullName>Humboldt</fullName>
                </value>
                <value>
                    <fullName>Imperial</fullName>
                </value>
                <value>
                    <fullName>Inyo</fullName>
                </value>
                <value>
                    <fullName>Kern</fullName>
                </value>
                <value>
                    <fullName>Kings</fullName>
                </value>
                <value>
                    <fullName>Lake</fullName>
                </value>
                <value>
                    <fullName>Lassen</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Madera</fullName>
                </value>
                <value>
                    <fullName>Marin</fullName>
                </value>
                <value>
                    <fullName>Mariposa</fullName>
                </value>
                <value>
                    <fullName>Mendocino</fullName>
                </value>
                <value>
                    <fullName>Merced</fullName>
                </value>
                <value>
                    <fullName>Modoc</fullName>
                </value>
                <value>
                    <fullName>Mono</fullName>
                </value>
                <value>
                    <fullName>Monterey</fullName>
                </value>
                <value>
                    <fullName>Napa</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Flood_Up_Date__c</fullName>
        <label>Estimated Flood Up Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Irrigation_District__c</fullName>
        <label>Irrigation District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manage_for_ducks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manage for ducks?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Property_Contact__c</fullName>
        <label>Other Property Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Fall_Practices__c</fullName>
        <label>Planned Fall Practices</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bale</fullName>
                </value>
                <value>
                    <fullName>Burn</fullName>
                </value>
                <value>
                    <fullName>Chop</fullName>
                </value>
                <value>
                    <fullName>Disc</fullName>
                </value>
                <value>
                    <fullName>Roll</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planned_Winter_Practices__c</fullName>
        <label>Planned Winter Practices</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flood Decomp</fullName>
                </value>
                <value>
                    <fullName>Stomp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Contact_Relationship__c</fullName>
        <label>Property Contact Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Tenant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Notes__c</fullName>
        <label>Property Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Source_of_Water__c</fullName>
        <label>Source of Water</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Surface</fullName>
                </value>
                <value>
                    <fullName>Ground</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Typical_Draw_Down_Date__c</fullName>
        <label>Typical Draw Down Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Typical_Fall_Practices__c</fullName>
        <label>Typical Fall Practices</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bale</fullName>
                </value>
                <value>
                    <fullName>Burn</fullName>
                </value>
                <value>
                    <fullName>Chisel</fullName>
                </value>
                <value>
                    <fullName>Chop</fullName>
                </value>
                <value>
                    <fullName>Disc</fullName>
                </value>
                <value>
                    <fullName>Fallow</fullName>
                </value>
                <value>
                    <fullName>Roll</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Typical_Winter_Practices__c</fullName>
        <label>Typical Winter Practices</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flood Decomp</fullName>
                </value>
                <value>
                    <fullName>Stomp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WHEP_Expiration_Date__c</fullName>
        <label>WHEP Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Winter_Flood_Depth_inches__c</fullName>
        <label>Winter Flood Depth (inches)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Winter_Flood_Duration__c</fullName>
        <label>Winter Flood Duration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>XDeprecated: Contact Property</label>
    <nameField>
        <label>Contact Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Properties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>